# fishregression

./: Dockerfile  pyproject.toml  requirements.txt
note/: 0909_fishRegression.ipynb  0910_fishLinearR.ipynb  0910_linearRegression.ipynb  fishRegression.ipynb
src/fishregression/: .cli.py.swp  .main.py.swp  cli.py  cpcli.py  main.py
src/fishregression/model/: lr_model.pkl  manager.py
